# triSYCL

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  README.rst  index.html  notes
tests/: CMakeLists.txt  Makefile  Makefile.bisect  README.rst  address_spaces.cpp  hierarchical.cpp  id.cpp  lit.cfg  me_array.cpp  parallel_matrix_add.cpp  parallel_vector_add.cpp  queue.cpp  range.cpp  run.git-bisect  single_task.cpp  vector_add.cpp
tests/2014-04-21-HPC-GPU_Meetup/: CMakeLists.txt  slide_13.cpp  slide_14.cpp  slide_17-18.cpp  slide_17.cpp  slide_21.cpp  slide_22.cpp  slide_23.cpp  slide_26.cpp  slide_7.cpp  slide_9-20.cpp
tests/SDAccel/: README.md  hls_ap_vector_add_kernel.cxx  hls_int_vector_add_kernel.cxx  hls_with_cppkernel_opencl_kernel_ap_vector_add_args.cpp  hls_with_cppkernel_opencl_kernel_int_vector_add_args.cpp  opencl_kernel_vector_add_args.cpp
tests/SPIR/: add_42.cl  opencl_kernel_output_42.cpp  opencl_kernel_vector_add_args.cpp  opencl_kernel_vector_add_int.cpp  output_42.cl  single_task_vector_increment_drt.cpp  vector_add.cl
tests/acap/: CMakeLists.txt  aie_noc_benchmark.cpp  async_transfer.cpp  async_vector_add.cpp  cascade_pipeliner.cpp  cascade_stream.cpp  checkerboard.cpp  data_memory.cpp  empty_program.cpp  hello_world.cpp  hello_world_device.cpp  hello_world_lambda.cpp  hello_world_uniform.cpp  hello_world_uniform_lambda.cpp  lock_memory.cpp  mandelbrot.cpp  mandelbrot_uniform.cpp  me_array.cpp  memory_module_limit.cpp  meta_mandelbrot.cpp  race_condition_uninitialized.cpp  router_circuit.cpp  routeur_circuit.cpp  shim.cpp  simple_circuit.cpp  simple_circuit_queue.cpp  wave_propagation.cpp
tests/acap-buffer/: CMakeLists.txt  buffer_device_lambda.cpp
tests/acap-lock/: CMakeLists.txt  lock_memory.cpp  race_condition_uninitialized.cpp  static_mem_neighborhood_lock.cpp
tests/acap-mem/: CMakeLists.txt  static_mem_neighborhood.cpp
tests/accessor/: CMakeLists.txt  accessor.cpp  accessor_new_delete.cpp  accessor_sizes.cpp  demo_parallel_matrix_add.cpp  host_accessor.cpp  iterators.cpp  local_accessor_hierarchical_convolution.cpp  uninitialized_local.cpp
tests/address_spaces/: CMakeLists.txt  address_spaces.cpp  address_spaces_pstl.cpp  address_spaces_ptr.cpp
tests/aie-axi-stream/: CMakeLists.txt  aie-axi-stream-fifo.cpp
tests/air/: CMakeLists.txt  simple_executor.cpp
tests/array_partition/: CMakeLists.txt  array_partition.cpp  array_partition_cyclicblock_class_cpu.cpp  array_partition_cyclicblock_class_fpga.cpp  array_partition_cyclicblock_class_pocl.cpp
tests/buffer/: CMakeLists.txt  associative_containers.cpp  buffer_data_tracking.cpp  buffer_get_count.cpp  buffer_map_allocator.cpp  buffer_set_final_data.cpp  buffer_set_final_data_1.cpp  buffer_shared_ptr.cpp  buffer_sizes.cpp  buffer_unique_ptr.cpp  buffer_write_order.cpp  global_buffer.cpp  global_buffer_host_access.cpp  global_buffer_set_final_data.cpp  read_write_buffer.cpp  shared_buffer.cpp  uninitialized_buffer.cpp
tests/capture/: CMakeLists.txt  capture_issue_168.cpp  capture_scalars.cpp  global_capture.cpp
tests/ce/: default_platform.cpp  queue.cpp
tests/common/: associative_container_checks.hpp  basic_object_checks.hpp  check_throwing_get.hpp  jacobi.h  test-helpers.hpp
tests/dataflow/: single_task_vector_add_drt_dataflow_func.cpp  single_task_vector_add_drt_dataflow_func_ssdm.cpp
tests/detail/: CMakeLists.txt  fiber_pool.cpp  small_array.cpp
tests/device/: CMakeLists.txt  default_device.cpp  get_info.cpp  opencl_device.cpp  type.cpp
tests/device_compiler/: array_partition_cyclicblock.cpp  buffer_of_objects_member_functions.cpp  buffer_of_objects_members.cpp  kernel_output_42-SPIR.cpp  kernel_output_42.cpp  parallel_for_ND_range.cpp  parallel_for_class_ctor_and_dtor.cpp  parallel_for_overloads.cpp  parallel_for_ranges.cpp  single_task_class_ctor_and_dtor.cpp  single_task_vector_add_automatic_array_dataflow_drt.cpp  single_task_vector_add_automatic_drt.cpp  single_task_vector_add_automatic_drt_kernel_arg_flatten.cpp  single_task_vector_add_drt.cpp  single_task_vector_add_drt_dataflow_func.cpp  single_task_vector_add_drt_dataflow_func_local.cpp  single_task_vector_add_drt_dataflow_func_local_on_host.cpp  single_task_vector_add_drt_dataflow_func_local_pipeline.cpp  single_task_vector_add_drt_dataflow_func_without_opt.cpp  single_task_vector_add_drt_func_local.cpp  single_task_vector_add_drt_func_local_on_host.cpp  single_task_vector_add_offset_drt.cpp  single_task_vector_extensive_increment_drt.cpp  single_task_vector_increment.cpp  single_task_vector_increment_drt.cpp  trivial.cpp
tests/device_selector/: CMakeLists.txt  explicit_selector.cpp  opencl_selector.cpp  selector.cpp
tests/examples/: CMakeLists.txt  demo_parallel_matrices_add.cpp  demo_parallel_matrix_add.cpp  generic_adder.cpp  generic_executor.cpp  parallel_matrix_add.cpp  parallel_vector_add.cpp  simpler_parallel_matrix_add.cpp  single_task_vector_increment.cpp  vector_add.cpp
tests/explicit_memory_operations/: copy_accessor_accessor.cpp  fill.cpp
tests/group/: CMakeLists.txt  group.cpp
tests/id/: CMakeLists.txt  id.cpp  id_any_dimension.cpp  tuple_like_protocol.cpp
tests/item/: CMakeLists.txt  item.cpp
tests/jacobi/: CMakeLists.txt  README.md  jacobi2d-st-cplx-var.cpp  jacobi2d-st-fxd.cpp  jacobi2d-st-gen-var.cpp  jacobi2d-st-var.cpp  jacobi2d-tile.cpp  jacobi2d.cpp
tests/kernel/: CMakeLists.txt  functor.cpp  functor_item.cpp  opencl_empty.cpp  opencl_kernel.cpp  opencl_kernel_empty.cpp  opencl_kernel_empty_set_args.cpp  opencl_kernel_single_task_vector_add_args_42.cpp  opencl_kernel_vector_add.cpp  opencl_kernel_vector_add_args.cpp  opencl_kernel_vector_add_args_42.cpp
tests/marray/: CMakeLists.txt  marray.cpp
tests/math/: CMakeLists.txt  math.cpp  opencl_type.cpp  vector_math.cpp
tests/mlir-aie/: CMakeLists.txt  mlir-aie-emulator.cpp
tests/multiple_compilation_units/: CMakeLists.txt  parallel_for.cc  parallel_for_other.C
tests/nd_item/: CMakeLists.txt  nd_item.cpp
tests/nd_range/: CMakeLists.txt  nd_range.cpp
(+7785 files in other folders)
